--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,14 +7,15 @@
 }
 :root {
   --primary-color: #f5f5f5;
-  --secondary-color: #eae2b7;
+  --secondary-color: #ceeab7;
   --bg-color: #fafafa;
   --bg-color2: #f5f5f5;
   --grey: rgba(5, 6, 15, 0.04);
   --darkgrey: rgba(5, 6, 15, 0.1);
+  --red: #e63946;
 
   --btn-color: #4169e1;
-  --btn-color-icon: #d6ccc2;
+
 }
 *{
   letter-spacing: 0.05rem;
@@ -31,6 +32,11 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+ul{
+  margin: 0;
+  padding: 0 1rem ;
 }
 
 .avatar {
@@ -81,16 +87,17 @@ a {
 }
 
 .btn-delete{
-  border: 1px solid #e63946;
+  border: 1px solid var(--red);
   background: none;
-  color: #e63946;
+  color: var(--red);
 }
 
 .btn-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--btn-color-icon);
+  background-color: var(--btn-color);
+  color: var(--primary-color);
   border-radius: 50%;
   width: 2.5rem;
   height: 2.5rem;
@@ -104,9 +111,7 @@ a {
 }
 
 /* header */
-.header {
-  margin: 1rem 0;
-}
+
 
 .card {
   display: grid;
@@ -119,6 +124,7 @@ a {
   padding: 1rem;
   justify-items: center;
   align-items: center;
+  cursor: pointer;
   transition: 0.3s ease-in-out;
 }
 
@@ -131,9 +137,10 @@ a {
 .card-inputs {
   justify-items: flex-start;
   align-items: flex-start;
+  cursor: default;
 }
 
-.card-inputs:hover {
+.card-inputs:hover, .platzi:hover {
   background-color: #fff;
   box-shadow: none;
   transform: none;
@@ -153,7 +160,12 @@ a {
 }
 
 .card-header {
+  /* grid-template-columns: 1fr 3fr; */
+  position: relative;
   min-height: 250px;
+  height: 100%;
+  scroll-snap-align: start;
+  min-width: 90%;
   background-color: var(--secondary-color);
 }
 
@@ -163,6 +175,27 @@ a {
 
 .card-header img {
   max-height: 8rem;
+}
+
+.platzi{
+  cursor: default;
+}
+
+.header{
+  margin: 1rem 0;
+}
+
+.header-slider{
+  justify-content: flex-start;
+  display: flex;
+  width: 95%;
+  overflow-x: scroll;
+  gap: 1rem;
+  scroll-snap-type: x proximity;
+  scroll-behavior: smooth;
+  scroll-padding-left: 1rem;
+  scroll-padding-right: 1rem; 
+  padding: 1rem .5rem;
 }
 
 .grid {
@@ -175,6 +208,9 @@ a {
 /* Text */
 .title {
   font-size: 2rem;
+}
+.title-link:hover{
+  text-decoration: underline;
 }
 .card-title {
   font-size: 1.5rem;
@@ -265,3 +301,5 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 0.8rem;
   display: none;
 }
+
+
