--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,25 +8,24 @@
 :root {
   --primary-color: #f5f5f5;
   --secondary-color: #ceeab7;
+  --tertiary-color: #faedcd;
   --bg-color: #fafafa;
   --bg-color2: #f5f5f5;
   --grey: rgba(5, 6, 15, 0.04);
   --darkgrey: rgba(5, 6, 15, 0.1);
   --red: #e63946;
-
+  --black: #333;
   --btn-color: #4169e1;
-
 }
-*{
+* {
   letter-spacing: 0.05rem;
 }
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
-  color: #333;
+  color: var(--black);
   background-color: var(--bg-color2);
- 
 }
 
 a {
@@ -34,14 +33,19 @@ a {
   color: inherit;
 }
 
-ul{
+ul,
+ol {
   margin: 0;
-  padding: 0 1rem ;
+  padding: 0 1rem;
 }
 
 .avatar {
   border-radius: 50%;
   margin-right: 0.5rem;
+}
+.avatar-span {
+  display: flex;
+  line-height: 1.5;
 }
 .img {
   -o-object-fit: contain;
@@ -54,9 +58,13 @@ ul{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
   background-color: var(--bg-color);
   border-bottom: 2px solid var(--grey);
+}
+
+.nav-avatar {
+  display: flex;
+  align-items: center;
 }
 
 .nav-contain {
@@ -66,8 +74,8 @@ ul{
 }
 
 .nav-contain img {
-  height: 32px;
-  width: 32px;
+  height: 3rem;
+  width: 3rem;
 }
 
 .btn {
@@ -77,7 +85,7 @@ ul{
   color: var(--primary-color);
   font-size: 1.2rem;
   padding: 0.7rem 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
@@ -86,7 +94,7 @@ ul{
   filter: brightness(0.95);
 }
 
-.btn-delete{
+.btn-delete {
   border: 1px solid var(--red);
   background: none;
   color: var(--red);
@@ -111,7 +119,6 @@ ul{
 }
 
 /* header */
-
 
 .card {
   display: grid;
@@ -140,7 +147,8 @@ ul{
   cursor: default;
 }
 
-.card-inputs:hover, .platzi:hover {
+.card-inputs:hover,
+.platzi:hover {
   background-color: #fff;
   box-shadow: none;
   transform: none;
@@ -160,42 +168,46 @@ ul{
 }
 
 .card-header {
-  /* grid-template-columns: 1fr 3fr; */
   position: relative;
   min-height: 250px;
   height: 100%;
   scroll-snap-align: start;
   min-width: 90%;
-  background-color: var(--secondary-color);
+  background-color: var(--tertiary-color);
 }
 
 .card-header:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--tertiary-color);
 }
 
 .card-header img {
   max-height: 8rem;
 }
 
-.platzi{
+.platzi {
   cursor: default;
+  background-color: var(--secondary-color);
+}
+.platzi:hover {
+  background-color: var(--secondary-color);
 }
 
-.header{
+.header {
   margin: 1rem 0;
 }
 
-.header-slider{
+.header-slider {
   justify-content: flex-start;
   display: flex;
   width: 95%;
   overflow-x: scroll;
   gap: 1rem;
-  scroll-snap-type: x proximity;
+  /* scroll-snap-type: x proximity; */
   scroll-behavior: smooth;
   scroll-padding-left: 1rem;
-  scroll-padding-right: 1rem; 
-  padding: 1rem .5rem;
+  scroll-padding-right: 1rem;
+  padding: 1rem 0.5rem;
+  cursor: grab;
 }
 
 .grid {
@@ -209,7 +221,8 @@ ul{
 .title {
   font-size: 2rem;
 }
-.title-link:hover{
+.title-link:hover,
+.avatar-span:hover {
   text-decoration: underline;
 }
 .card-title {
@@ -293,13 +306,35 @@ input[type="number"]::-webkit-inner-spin-button {
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 1.2rem
+  gap: 1.2rem;
 }
 
-.error{
+.error {
   color: #e63946;
   font-size: 0.8rem;
   display: none;
 }
 
+@media screen and (max-width: 468px) {
+  *{
+    letter-spacing: normal;
+  }
+  .nav-avatar {
+    display: none;
+  }
 
+  .card-img {
+    max-height: 3rem;
+  }
+  
+  .card-header{
+    gap: 1rem;
+    align-items: flex-start;
+  }
+  .grid{
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  .card-header img, .card-img{
+    max-height: 2rem;
+  }
+}
